--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,14 +199,12 @@ p {
     visibility: hidden; }
 
 .radio-holder {
-  position: relative;
   margin-top: 60px;
-  width: 50%;
   height: 270px;
   margin-left: auto;
   margin-right: auto; }
   .radio-holder .radio-title-frame {
-    width: 90%;
+    width: 852px;
     margin-left: auto;
     margin-right: auto;
     display: block; }
@@ -223,11 +221,13 @@ p {
       display: inline-flex;
       align-items: center; }
   .radio-holder .radio-frame {
-    margin-top: 22px; }
+    margin-top: 22px;
+    position: relative;
+    height: 200px; }
     .radio-holder .radio-frame .radio-frame-main {
       position: absolute;
       z-index: 3;
-      width: 90%;
+      width: 852px;
       height: 178px;
       overflow: hidden;
       margin-left: auto;
@@ -235,13 +235,91 @@ p {
       left: 0;
       right: 0;
       display: block;
-      background-image: url("/thecup/resources/img/radio-frame.png");
-      background-size: cover; }
+      background-color: #F0F0F0; }
+      .radio-holder .radio-frame .radio-frame-main .radio-img {
+        display: inline-block;
+        width: 23%; }
+        .radio-holder .radio-frame .radio-frame-main .radio-img img {
+          height: 100%; }
+      .radio-holder .radio-frame .radio-frame-main .radio-controller {
+        padding: 25px 20px 20px 5px;
+        width: 77%;
+        display: inline-block;
+        height: 100%; }
+        .radio-holder .radio-frame .radio-frame-main .radio-controller .title {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 140%;
+          color: #333333; }
+        .radio-holder .radio-frame .radio-frame-main .radio-controller .author {
+          margin-top: 7px;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 140%;
+          color: #22539D; }
+        .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder {
+          margin-top: 25px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between; }
+          .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .play-button {
+            border: 1px solid #333333;
+            box-sizing: border-box;
+            width: 58px;
+            height: 58px;
+            border-radius: 30px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center; }
+          .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .btn {
+            padding: 0;
+            display: inline-flex;
+            align-items: center; }
+          .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .prog {
+            width: 58%;
+            height: 10px;
+            align-items: center;
+            display: inline-flex;
+            cursor: pointer; }
+            .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .prog .slider {
+              -webkit-appearance: none;
+              width: 100%;
+              height: 1px;
+              border-radius: 5px;
+              background: #000000;
+              outline: none;
+              opacity: 1;
+              cursor: pointer; }
+            .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .prog .slider::-webkit-slider-thumb {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 15px;
+              height: 15px;
+              border-radius: 50%;
+              background: #1B3864;
+              cursor: pointer; }
+            .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .prog .slider::-moz-range-thumb {
+              width: 25px;
+              height: 25px;
+              border-radius: 50%;
+              background: #04AA6D;
+              cursor: pointer; }
+          .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .timer-holder {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 13px;
+            line-height: 140%;
+            color: #000000; }
+          .radio-holder .radio-frame .radio-frame-main .radio-controller .button-holder .volume-holder {
+            display: inline-flex;
+            align-items: center; }
     .radio-holder .radio-frame .radio-frame-behind1 {
       position: absolute;
       z-index: 2;
       display: block;
-      width: 92.5%;
+      width: 876px;
       height: 178px;
       margin-left: auto;
       margin-right: auto;
@@ -254,7 +332,7 @@ p {
       position: absolute;
       z-index: 1;
       display: block;
-      width: 95.5%;
+      width: 898px;
       height: 178px;
       margin-left: auto;
       margin-right: auto;
@@ -268,8 +346,9 @@ p {
     align-items: center;
     justify-content: center;
     position: absolute;
-    left: -60px;
-    top: 40%;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 4;
     width: 54px;
     height: 54px;
@@ -285,8 +364,9 @@ p {
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: -60px;
-    top: 40%;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 4;
     border-color: #E8EFFA;
     width: 54px;
