--- a/template/author.html
+++ b/template/author.html
@@ -121,11 +121,15 @@
                     <div class="col-md-8">
                         <p class="author-name">Nguyễn Trường Giang</p>
                         <div class="author-birth">
-                            <span>icon</span>
+                            <span class="material-icons material-icons-outlined">
+                            cake
+                            </span>
                             <span>17/12/1988</span>
                         </div>
                         <div class="author-nickname">
-                            <span>icon</span>
+                            <span class="material-icons material-icons-outlined">
+                            account_box
+                            </span>
                             <span>Kiếm răng cưa</span>
                         </div>
                     </div>
@@ -164,10 +168,11 @@
                 <div class="news-other-post">
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-1.png" alt="">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
                                     giá
                                     hơn rất nhiều</p>
@@ -186,21 +191,21 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-2.png" alt="">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-2.png" alt="">
                                 <div class="listenable-box">
                                     <img width="32" height="32" class="listenable-icon"
-                                         src="../resources/img/icon/ic_playlist.svg" alt="">
+                                         src="/thecup/resources/img/icon/ic_playlist.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Làm sao để có thể là một nhà lãnh đạo tốt</p>
                                 <div class="other-post-information">
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 phút 20 giây</span>
+
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -212,14 +217,15 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-3.png" alt="">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-3.png" alt="">
                                 <div class="listenable-box">
-                                    <img width="14" height="18" class="listenable-icon"
-                                         src="../resources/img/icon/ic_play.svg" alt="">
+                                    <img width="14" height="18" class="listenable-icon play-icon"
+                                         src="/thecup/resources/img/icon/ic_play.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Kinh tế học đại cương tóm tắt và ngắn gọn</p>
                                 <div class="other-post-information">
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
@@ -238,10 +244,11 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-4.png" alt="">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-4.png" alt="">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
                                     giá
                                     hơn rất nhiều</p>
@@ -260,10 +267,11 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-5.png" alt="">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-5.png" alt="">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
                                     giá
                                     hơn rất nhiều</p>
@@ -282,21 +290,21 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-6.png" alt="">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-6.png" alt="">
                                 <div class="listenable-box">
                                     <img width="32" height="32" class="listenable-icon"
-                                         src="../resources/img/icon/ic_playlist.svg" alt="">
+                                         src="/thecup/resources/img/icon/ic_playlist.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Làm sao để có thể là một nhà lãnh đạo tốt</p>
                                 <div class="other-post-information">
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 phút 20 giây</span>
+
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -308,14 +316,15 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-7.png" alt="">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-7.png" alt="">
                                 <div class="listenable-box">
-                                    <img width="14" height="18" class="listenable-icon"
-                                         src="../resources/img/icon/ic_play.svg" alt="">
+                                    <img width="14" height="18" class="listenable-icon play-icon"
+                                         src="/thecup/resources/img/icon/ic_play.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Kinh tế học đại cương tóm tắt và ngắn gọn</p>
                                 <div class="other-post-information">
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
@@ -334,10 +343,11 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-8.png" alt="">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-8.png" alt="">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
                                     giá
                                     hơn rất nhiều</p>
