--- a/template/contact.html
+++ b/template/contact.html
@@ -122,8 +122,8 @@
           Hãy gửi email và chúng tôi sẽ phản hồi nó sớm nhất có thể</p>
         </div>
         <div class="address">
-          <p class="title">Chăm sóc khách hàng</p>
-          <p class="addr">contact@thecup.vn</p>
+          <p class="title">Địa chỉ tòa soạn</p>
+          <p class="addr">132 Trung Kính, Trung Hoà, Cầu Giấy, Hà Nội</p>
           <p class="text">Nếu bạn có bất cứ câu hỏi nào!
           Hãy gửi email và chúng tôi sẽ phản hồi nó sớm nhất có thể</p>
         </div>
