--- a/template/image_post.html
+++ b/template/image_post.html
@@ -136,52 +136,52 @@
       </div>
       <div class="img-grid">
         <div class="row">
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-1.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-2.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-3.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-4.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-5.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-6.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-7.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-8.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-9.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-10.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-11.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-12.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-13.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-14.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-15.png" alt="">
           </div>
-          <div class="col-md-3 img-block">
+          <div class="col-4 col-md-3 img-block">
             <img src="../resources/img/grid/grid-12.png" alt="">
           </div>
         </div>
@@ -282,7 +282,7 @@
         <div class="carousel-item">
           <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Tôi lựa chọn cực khổ thay vì tiết kiệm tiền đi đi du lịch</h5>
+            <h5>Việc hôm nay đừng để ngày mai</h5>
             <p>Ngày 24 tháng 5, 2020</p>
           </div>
           <div class="item-pos">
@@ -293,7 +293,7 @@
         <div class="carousel-item">
           <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Tôi thà tiết kiệm tiền còn hơn đi du lịch</h5>
+            <h5>Sống có ý nghĩa hơn</h5>
             <p>Ngày 24 tháng 5, 2020</p>
           </div>
           <div class="item-pos">
