--- a/template/my_account.html
+++ b/template/my_account.html
@@ -170,7 +170,14 @@
           </button>
         </div>
         <div class="trial-card">
-
+          <div class="card-inner">
+            <p class="card-title">Dùng thử</p>
+            <p class="card-scope">Truy cập giới hạn</p>
+            <div class="expire">
+              <span class="text">Thời hạn sử dụng</span>
+              <span class="date">24:00 19/07/2021</span>
+            </div>
+          </div>
         </div>
         <button class="btn btn-primary">
           <a href="/thecup/template/purchase.html">
@@ -178,9 +185,15 @@
           </a>
         </button>
         <div class="sixmonth-card">
-
+          <div class="card-inner">
+            <p class="card-title white">Dùng thử</p>
+            <p class="card-scope white">Truy cập giới hạn</p>
+            <div class="expire">
+              <span class="text white">Thời hạn sử dụng</span>
+              <span class="date">24:00 19/07/2021</span>
+            </div>
+          </div>
         </div>
-
         <button class="btn btn-primary">
           <a href="/thecup/template/purchase.html">
             Nâng cấp gói
