--- a/template/register.html
+++ b/template/register.html
@@ -29,7 +29,7 @@
                 <span>Facebook</span>
             </button>
             <button class="btn btn-outline-success btn-google">
-                <img src="../resources/img/Button/google.svg" alt="">
+                <img src="/thecup/resources/img/Button/google.svg" alt="">
                 <span>Google</span>
             </button>
         </div>
