--- a/template/restricted-post.html
+++ b/template/restricted-post.html
@@ -294,7 +294,7 @@
 <div class="restrict-layer"></div>
 <div class="restrict-layer-text fixed-bottom">
     <div class="wrapper">
-        <p class="text1">Đây là bài viết bị giới hạn</p>
+        <p class="text1">Bài viết bị giới hạn</p>
         <p class="text2">Vui lòng Đăng nhập hoặc Đăng ký để tiếp tục</p>
         <div class="button-holder">
             <button class="btn btn-primary button-reg">Đăng ký</button>
