--- a/template/life.html
+++ b/template/life.html
@@ -106,7 +106,7 @@
 </div>
 <!--Category-banner-end-->
 <!--Life-Carousel-start-->
-<div id="life-carousel" class="carousel slide carousel-fade life-carousel-holder" data-bs-ride="none">
+<div id="life-carousel" class="carousel slide carousel-fade life-carousel-holder" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -129,7 +129,7 @@
             <a href="/thecup/template/image_post.html">
                 <img src="../resources/img/carousel/life-carousel-1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Tôi lựa chọn cực khổ thay vì tiết kiệm tiền đi đi du lịch</h5>
+                    <h5>Mỗi chúng ta chỉ sống một lần trên đời</h5>
                     <p>Ngày 24 tháng 5, 2020</p>
                 </div>
             </a>
@@ -138,7 +138,7 @@
             <a href="/thecup/template/image_post.html">
                 <img src="../resources/img/carousel/life-carousel-1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Tôi thà tiết kiệm tiền còn hơn đi du lịch</h5>
+                    <h5>Sống có ích mỗi ngày</h5>
                     <p>Ngày 24 tháng 5, 2020</p>
                 </div>
             </a>
@@ -167,87 +167,12 @@
             <div class="news-main col-md-8">
                 <div class="news-other-post">
                     <div class="other-post">
-                        <a href="/thecup/template/covid_post.html">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img src="../resources/img/other%20post/another-post-1.png" alt="">
-                                </div>
-                                <div class="col-md-8">
-                                    <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
-                                        giá
-                                        hơn rất nhiều</p>
-                                    <div class="other-post-information">
-                                        <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                                        <div class="info-seperator"></div>
-                                        <span class="other-post-comment-info">3 bình luận</span>
-                                    </div>
-                                    <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                                        ròng
-                                        khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                                        tập
-                                        trung vào các ...</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-2.png" alt="">
-                                <div class="listenable-box">
-                                    <img width="32" height="32" class="listenable-icon"
-                                         src="../resources/img/icon/ic_playlist.svg" alt="">
-                                </div>
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
                             </div>
-                            <div class="col-md-8">
-                                <p class="other-post-title">Làm sao để có thể là một nhà lãnh đạo tốt</p>
-                                <div class="other-post-information">
-                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 bình luận</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 phút 20 giây</span>
-                                </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                                    ròng
-                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                                    tập
-                                    trung vào các ...</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="other-post">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-3.png" alt="">
-                                <div class="listenable-box">
-                                    <img width="14" height="18" class="listenable-icon"
-                                         src="../resources/img/icon/ic_play.svg" alt="">
-                                </div>
-                            </div>
-                            <div class="col-md-8">
-                                <p class="other-post-title">Kinh tế học đại cương tóm tắt và ngắn gọn</p>
-                                <div class="other-post-information">
-                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 bình luận</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">0 audio</span>
-                                </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                                    ròng
-                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                                    tập
-                                    trung vào các ...</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="other-post">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-4.png" alt="">
-                            </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
                                     giá
                                     hơn rất nhiều</p>
@@ -266,43 +191,21 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-5.png" alt="">
-                            </div>
-                            <div class="col-md-8">
-                                <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
-                                    giá
-                                    hơn rất nhiều</p>
-                                <div class="other-post-information">
-                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 bình luận</span>
-                                </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                                    ròng
-                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                                    tập
-                                    trung vào các ...</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="other-post">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-6.png" alt="">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-2.png" alt="">
                                 <div class="listenable-box">
                                     <img width="32" height="32" class="listenable-icon"
-                                         src="../resources/img/icon/ic_playlist.svg" alt="">
+                                         src="/thecup/resources/img/icon/ic_playlist.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Làm sao để có thể là một nhà lãnh đạo tốt</p>
                                 <div class="other-post-information">
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 phút 20 giây</span>
+
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -314,14 +217,15 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img class="post-img" src="../resources/img/other%20post/another-post-7.png" alt="">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-3.png" alt="">
                                 <div class="listenable-box">
-                                    <img width="14" height="18" class="listenable-icon"
-                                         src="../resources/img/icon/ic_play.svg" alt="">
+                                    <img width="14" height="18" class="listenable-icon play-icon"
+                                         src="/thecup/resources/img/icon/ic_play.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Kinh tế học đại cương tóm tắt và ngắn gọn</p>
                                 <div class="other-post-information">
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
@@ -340,10 +244,110 @@
                     </div>
                     <div class="other-post">
                         <div class="row">
-                            <div class="col-md-4">
-                                <img src="../resources/img/other%20post/another-post-8.png" alt="">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-4.png" alt="">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
+                                <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
+                                    giá
+                                    hơn rất nhiều</p>
+                                <div class="other-post-information">
+                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
+                                    <div class="info-seperator"></div>
+                                    <span class="other-post-comment-info">3 bình luận</span>
+                                </div>
+                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                    ròng
+                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
+                                    tập
+                                    trung vào các ...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="other-post">
+                        <div class="row">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-5.png" alt="">
+                            </div>
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
+                                <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
+                                    giá
+                                    hơn rất nhiều</p>
+                                <div class="other-post-information">
+                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
+                                    <div class="info-seperator"></div>
+                                    <span class="other-post-comment-info">3 bình luận</span>
+                                </div>
+                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                    ròng
+                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
+                                    tập
+                                    trung vào các ...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="other-post">
+                        <div class="row">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-6.png" alt="">
+                                <div class="listenable-box">
+                                    <img width="32" height="32" class="listenable-icon"
+                                         src="/thecup/resources/img/icon/ic_playlist.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
+                                <p class="other-post-title">Làm sao để có thể là một nhà lãnh đạo tốt</p>
+                                <div class="other-post-information">
+                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
+                                    <div class="info-seperator"></div>
+                                    <span class="other-post-comment-info">3 bình luận</span>
+
+                                </div>
+                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                    ròng
+                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
+                                    tập
+                                    trung vào các ...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="other-post">
+                        <div class="row">
+                            <div class="col-5">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-7.png" alt="">
+                                <div class="listenable-box">
+                                    <img width="14" height="18" class="listenable-icon play-icon"
+                                         src="/thecup/resources/img/icon/ic_play.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
+                                <p class="other-post-title">Kinh tế học đại cương tóm tắt và ngắn gọn</p>
+                                <div class="other-post-information">
+                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
+                                    <div class="info-seperator"></div>
+                                    <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <span class="other-post-comment-info">0 audio</span>
+                                </div>
+                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                    ròng
+                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
+                                    tập
+                                    trung vào các ...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="other-post">
+                        <div class="row">
+                            <div class="col-5">
+                                <img src="/thecup/resources/img/other%20post/another-post-8.png" alt="">
+                            </div>
+                            <div class="col-7">
+                                <p class="other-post-category">Sống</p>
                                 <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
                                     giá
                                     hơn rất nhiều</p>
