--- a/template/login.html
+++ b/template/login.html
@@ -25,7 +25,7 @@
         <p class="reg-title">Đăng nhập</p>
         <div class="oauth-button">
             <button class="btn btn-primary btn-facebook">
-                <img src="../resources/img/Button/facebook.svg" alt="">
+                <img src="/thecup/resources/img/Button/facebook.svg" alt="">
                 <span>Facebook</span>
             </button>
             <button class="btn btn-outline-success btn-google">
