--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -317,7 +317,7 @@
                         <div id="progress" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25"
                              aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span id="duration" class="total-time">n/a</span>
+                    <span id="duration" class="total-time">0:00</span>
                 </div>
             </div>
         </div>
