--- a/template/purchase.html
+++ b/template/purchase.html
@@ -108,7 +108,7 @@
 <!--Contact-start-->
 <div class="purchase-holder">
     <div class="container">
-        <div class="row row-cols-4">
+        <div class="row">
             <div class="col-md-3">
                 <div class="package-box">
                     <p class="package-title">Dùng thử 7 ngày</p>
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact">Mọi thắc mắc hoặc hỗ trợ xin vui lòng liên hệ 1800 1243</div>
+        <div class="contact">Cần hỗ trợ xin vui lòng liên hệ 1800 1243</div>
     </div>
 </div>
 <!--Contact-end-->
