--- a/template/my_account.html
+++ b/template/my_account.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
     <a class="navbar-brand" href="/thecup/">
-      <img class="logo" height="40" src="../resources/img/Logo.svg" alt="">
+      <img class="logo" height="40" src="/thecup/resources/img/Logo.svg" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
             Sống
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
+            <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -64,7 +64,7 @@
             Công nghệ
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
+            <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
             <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
             <li>
               <hr class="dropdown-divider">
