fix image-post column order

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -2475,7 +2475,7 @@ $navbar-color : #1B3864;
       height: 350px;
       width: 100%;
       padding-left: 0px!important;
-      margin-top: 30px;
+      margin-top: 0px!important;
       .carousel-indicators{
         bottom: 3%;
         button{
