--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2562,8 +2562,9 @@ p{
           margin-top: 10px;
           display: flex;
           justify-content: center;
+          padding: 0px 5px;
           img{
-            width: 103px;
+            width: 100%;
           }
         }
       }
