--- a/template/image_post.html
+++ b/template/image_post.html
@@ -256,7 +256,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9 order-first order-md-last">
     <!--Life-Carousel-start-->
     <div id="life-carousel" class="carousel slide carousel-fade life-carousel-holder" data-bs-ride="none">
       <div class="carousel-indicators">
