--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1992,7 +1992,7 @@
     height: 350px;
     width: 100%;
     padding-left: 0px !important;
-    margin-top: 30px; }
+    margin-top: 0px !important; }
     .image-post-body .life-carousel-holder .carousel-indicators {
       bottom: 3%; }
       .image-post-body .life-carousel-holder .carousel-indicators button {
