--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2044,9 +2044,10 @@ p {
       .image-post-body .image-post-holder .image-grid-holder .img-grid .img-block {
         margin-top: 10px;
         display: flex;
-        justify-content: center; }
+        justify-content: center;
+        padding: 0px 5px; }
         .image-post-body .image-post-holder .image-grid-holder .img-grid .img-block img {
-          width: 103px; }
+          width: 100%; }
     .image-post-body .image-post-holder .image-grid-holder .comment {
       margin-top: 40px; }
       .image-post-body .image-post-holder .image-grid-holder .comment .comment-block {
